--- a/fodder/nginx/xray.conf
+++ b/fodder/nginx/xray.conf
@@ -1,9 +1,4 @@
 server {
-listen 81;
-listen [::]:81;
-root /var/www/html;
-}
-server {
 listen 18020 proxy_protocol so_keepalive=on reuseport;
 listen [::]:18020 proxy_protocol so_keepalive=on reuseport;
 listen 443 ssl http2 reuseport;
@@ -142,3 +137,11 @@ autoindex on;
                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      }
  }
+server {
+listen 81 ssl http2 reuseport;
+ssl_certificate /etc/xray/xray.crt;
+ssl_certificate_key /etc/xray/xray.key;
+ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
+ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+root /var/www/html;
+}
