--- a/fodder/bhoikfostyahya/sslh.service
+++ b/fodder/bhoikfostyahya/sslh.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=SSLH Server
-Documentation=https://t.me/bhoikfost_yahya
+Documentation=https://t.me/anggun2
 After=syslog.target network-online.target
 
 [Service]
