--- a/fodder/FighterTunnel-examples/runc/vps.conf
+++ b/fodder/FighterTunnel-examples/runc/vps.conf
@@ -1,9 +1,9 @@
 server {
-listen       81;
-  server_name  127.0.0.1 localhost;
+listen       8000;
+  server_name   server_name xxx;
   access_log /var/log/nginx/vps-access.log;
   error_log /var/log/nginx/vps-error.log error;
-  root   /home/vps/public_html;
+  root   /var/www/html;
 
   location / {
     index  index.html index.htm index.php;
