--- a/fodder/FighterTunnel-examples/runc/vps.conf
+++ b/fodder/FighterTunnel-examples/runc/vps.conf
@@ -1,6 +1,6 @@
 server {
 listen       8000;
-  server_name   server_name xxx;
+server_name xxx;
   access_log /var/log/nginx/vps-access.log;
   error_log /var/log/nginx/vps-error.log error;
   root   /var/www/html;
