--- a/images/xray.conf
+++ b/images/xray.conf
@@ -9,32 +9,23 @@
              ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
              ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
              root /home/vps/public_html;
-location /
-{
+location / {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /vmess break;
+}
 proxy_redirect off;
-proxy_pass http://127.0.0.1:700;
+proxy_pass http://127.0.0.1:40430;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
-proxy_set_header Host $http_host;
+proxy_set_header Host $host;
 }
 location = /vless
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:38851;
-proxy_http_version 1.1;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
-proxy_set_header Host $http_host;
-}
-location = /vmess
-{
-proxy_redirect off;
-proxy_pass http://127.0.0.1:20354;
+proxy_pass http://127.0.0.1:16260;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -45,7 +36,7 @@ proxy_set_header Host $http_host;
 location = /worryfree
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:32274;
+proxy_pass http://127.0.0.1:40907;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,7 +47,7 @@ proxy_set_header Host $http_host;
 location = /kuota-habis
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:42013;
+proxy_pass http://127.0.0.1:38401;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -67,7 +58,7 @@ proxy_set_header Host $http_host;
 location = /trojan-ws
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:25759;
+proxy_pass http://127.0.0.1:29990;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -78,7 +69,7 @@ proxy_set_header Host $http_host;
 location = /ss-ws
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:18417;
+proxy_pass http://127.0.0.1:19005;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -92,7 +83,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:21638;
+grpc_pass grpc://127.0.0.1:15345;
 }
 location ^~ /vmess-grpc
 {
@@ -100,7 +91,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:11184;
+grpc_pass grpc://127.0.0.1:28551;
 }
 location ^~ /trojan-grpc
 {
@@ -108,7 +99,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:25769;
+grpc_pass grpc://127.0.0.1:24431;
 }
 location ^~ /ss-grpc
 {
@@ -116,6 +107,6 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:29890;
+grpc_pass grpc://127.0.0.1:40752;
 }
         }
