--- a/images/xray.conf
+++ b/images/xray.conf
@@ -14,18 +14,17 @@ if ($http_upgrade != "Upgrade") {
 rewrite /(.*) /vmess break;
 }
 proxy_redirect off;
-proxy_pass http://127.0.0.1:40431;
+proxy_pass http://127.0.0.1:29109;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
-}
-location = /vless
+}location = /vless
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:40432;
+proxy_pass http://127.0.0.1:34771;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,7 +35,7 @@ proxy_set_header Host $http_host;
 location = /worryfree
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:40433;
+proxy_pass http://127.0.0.1:31315;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -47,7 +46,7 @@ proxy_set_header Host $http_host;
 location = /kuota-habis
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:40434;
+proxy_pass http://127.0.0.1:40126;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -58,7 +57,7 @@ proxy_set_header Host $http_host;
 location = /trojan-ws
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:40435;
+proxy_pass http://127.0.0.1:39604;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -69,7 +68,7 @@ proxy_set_header Host $http_host;
 location = /ss-ws
 {
 proxy_redirect off;
-proxy_pass http://127.0.0.1:40436;
+proxy_pass http://127.0.0.1:20075;
 proxy_http_version 1.1;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -83,7 +82,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:40437;
+grpc_pass grpc://127.0.0.1:28639;
 }
 location ^~ /vmess-grpc
 {
@@ -91,7 +90,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:40438;
+grpc_pass grpc://127.0.0.1:16019;
 }
 location ^~ /trojan-grpc
 {
@@ -99,7 +98,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:40439;
+grpc_pass grpc://127.0.0.1:19053;
 }
 location ^~ /ss-grpc
 {
@@ -107,6 +106,6 @@ proxy_redirect off;
 grpc_set_header X-Real-IP $remote_addr;
 grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 grpc_set_header Host $http_host;
-grpc_pass grpc://127.0.0.1:40440;
+grpc_pass grpc://127.0.0.1:41792;
 }
         }
