--- a/images/xray.conf
+++ b/images/xray.conf
@@ -21,7 +21,8 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
-}location = /vless
+}
+location = /vless
 {
 proxy_redirect off;
 proxy_pass http://127.0.0.1:34771;
