--- a/images/nginx.conf
+++ b/images/nginx.conf
@@ -1,53 +1,60 @@
-user www-data;
+user root;
+worker_processes  auto;
+worker_rlimit_nofile 10000000;
 
-worker_processes 1;
-pid /var/run/nginx.pid;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
+load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 events {
-	multi_accept on;
-  worker_connections 1024;
+    worker_connections  4096;
 }
 
 http {
-	gzip on;
-	gzip_vary on;
-	gzip_comp_level 5;
-	gzip_types    text/plain application/x-javascript text/xml text/css;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-	autoindex on;
-  sendfile on;
-  tcp_nopush on;
-  tcp_nodelay on;
-  keepalive_timeout 65;
-  types_hash_max_size 2048;
-  server_tokens off;
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
-  client_max_body_size 32M;
-	client_header_buffer_size 8m;
-	large_client_header_buffers 8 8m;
+    log_format  main  '$proxy_add_x_forwarded_for - $http_x_forwarded_for - $http_cf_connecting_ip - $proxy_protocol_addr - $remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-	fastcgi_buffer_size 8m;
-	fastcgi_buffers 8 8m;
+    access_log  /var/log/nginx/access.log  main;
+    open_log_file_cache max=1000;
 
-	fastcgi_read_timeout 600;
+    sendfile        on;
+    #tcp_nopush     on;
 
-	set_real_ip_from 204.93.240.0/24;
-	set_real_ip_from 204.93.177.0/24;
-	set_real_ip_from 199.27.128.0/21;
-	set_real_ip_from 173.245.48.0/20;
-	set_real_ip_from 103.21.244.0/22;
-	set_real_ip_from 103.22.200.0/22;
-	set_real_ip_from 103.31.4.0/22;
-	set_real_ip_from 141.101.64.0/18;
-	set_real_ip_from 108.162.192.0/18;
-	set_real_ip_from 190.93.240.0/20;
-	set_real_ip_from 188.114.96.0/20;
-	set_real_ip_from 197.234.240.0/22;
-	set_real_ip_from 198.41.128.0/17;
-	real_ip_header     CF-Connecting-IP;
+    keepalive_timeout  65;
 
-  include /etc/nginx/conf.d/*.conf;
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
+}
+
+stream {
+
+log_format proxy '$remote_addr [$time_local] '
+                 '$protocol  $bytes_sent $bytes_received '
+                 '$session_time "$upstream_addr" '
+                 '"$upstream_bytes_sent" "$upstream_bytes_received" "$upstream_connect_time"';
+
+
+open_log_file_cache max=1000;
+
+#map   {
+#    ~\bh2\b           127.0.0.1:;
+#    default           127.0.0.1:5569;
+#}
+
+#  server {
+#	  listen 443 so_keepalive=on;
+#	  proxy_pass ;
+#	  ssl_preread on;
+#  }
+  
+#  server {
+#    listen 80 so_keepalive=on;
+#    proxy_pass 127.0.0.1:880;
+#    proxy_protocol on;
+#  }
 }
