--- a/images/ws-stunnel.service
+++ b/images/ws-stunnel.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=SSH Over Websocket Python By Arz VPN
-Documentation=https://panel.arzvpnstore.biz.id
+Documentation=https://github
 After=network.target nss-lookup.target
 
 [Service]
