--- a/images/ws-stunnel.service
+++ b/images/ws-stunnel.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=SSH Over Websocket Python By Arz VPN
+Description=SSH Over Websocket Python
 Documentation=https://github
 After=network.target nss-lookup.target
 
