--- a/fodder/nginx/xray.conf
+++ b/fodder/nginx/xray.conf
@@ -7,7 +7,7 @@ ssl_certificate /etc/xray/xray.crt;
 ssl_certificate_key /etc/xray/xray.key;
 ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
 ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-server_name xxx;
+server_name 127.0.0.1;
 autoindex on;
 
     access_log  /dev/null;
@@ -17,7 +17,7 @@ if ($http_upgrade != "Upgrade") {
 rewrite /(.*) /vless break;
       }
 proxy_redirect off;
-proxy_pass http://127.0.0.1:10001;
+proxy_pass http://127.0.0.1:19001;
 proxy_http_version 1.1;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
@@ -30,7 +30,7 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                    rewrite /(.*) /vmess break;
      }
                    proxy_redirect off;
-                   proxy_pass http://127.0.0.1:10002;
+                   proxy_pass http://127.0.0.1:19002;
                    proxy_http_version 1.1;
                    proxy_set_header Upgrade $http_upgrade;
                    proxy_set_header Connection "upgrade";
@@ -43,7 +43,7 @@ if ($http_upgrade != "Upgrade") {
 rewrite /(.*) /trojan-ws break;
      }
 proxy_redirect off;
-proxy_pass http://127.0.0.1:10003;
+proxy_pass http://127.0.0.1:19003;
 proxy_http_version 1.1;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
@@ -56,7 +56,7 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                    rewrite /(.*) /ss-ws break;
      }
                    proxy_redirect off;
-                   proxy_pass http://127.0.0.1:10004;
+                   proxy_pass http://127.0.0.1:19004;
                    proxy_http_version 1.1;
                    proxy_set_header Upgrade $http_upgrade;
                    proxy_set_header Connection "upgrade";
@@ -70,7 +70,7 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                           grpc_set_header X-Real-IP \$remote_addr;
                           grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
                           grpc_set_header Host \$http_host;
-                          grpc_pass grpc://127.0.0.1:10005;
+                          grpc_pass grpc://127.0.0.1:19005;
      }
       location ^~ /vmess-grpc
      {
@@ -78,7 +78,7 @@ proxy_redirect off;
 grpc_set_header X-Real-IP \$remote_addr;
 grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
 grpc_set_header Host \$http_host;
-grpc_pass grpc://127.0.0.1:10006;
+grpc_pass grpc://127.0.0.1:19006;
      }
 
       location ^~ /trojan-grpc
@@ -87,7 +87,7 @@ grpc_pass grpc://127.0.0.1:10006;
                           grpc_set_header X-Real-IP \$remote_addr;
                           grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
                           grpc_set_header Host \$http_host;
-                          grpc_pass grpc://127.0.0.1:10007;
+                          grpc_pass grpc://127.0.0.1:19007;
      }
       location ^~ /ss-grpc
      {
@@ -95,17 +95,17 @@ proxy_redirect off;
 grpc_set_header X-Real-IP \$remote_addr;
 grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
 grpc_set_header Host \$http_host;
-grpc_pass grpc://127.0.0.1:10008;
+grpc_pass grpc://127.0.0.1:19008;
 
       }
 }
 server {
 listen 10030 proxy_protocol so_keepalive=on reuseport;
 listen [::]:10030 proxy_protocol so_keepalive=on reuseport;
-server_name xxx;
+server_name 127.0.0.1;
       location / {
       if ($http_upgrade != "Upgrade") {
-      rewrite /(.*) /fightertunnelssh break;
+      rewrite /(.*) /anggunssh break;
       }
                    proxy_redirect off;
                    proxy_pass http://127.0.0.1:10015;
@@ -121,11 +121,11 @@ server_name xxx;
 server {
 listen 10040 proxy_protocol so_keepalive=on reuseport;
 listen [::]:10040 proxy_protocol so_keepalive=on reuseport;
-server_name xxx;
+server_name 127.0.0.1;
 autoindex on;
       location / {
       if ($http_upgrade != "Upgrade") {
-      rewrite /(.*) /fightertunnelovpn break;
+      rewrite /(.*) /anggunovpn break;
       }
                    proxy_redirect off;
                    proxy_pass http://127.0.0.1:10012;
