--- a/fodder/websocket/ws.service
+++ b/fodder/websocket/ws.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=WebSocket
-Documentation=https://www.google.com/
+Documentation=https://t.me/amantubilah
 After=syslog.target network-online.target
 
 [Service]
