--- a/VMess-VLESS-Trojan+Websocket+gRPC/config.json
+++ b/VMess-VLESS-Trojan+Websocket+gRPC/config.json
@@ -1,4 +1,7 @@
+# set uuid
 uuid=$(cat /proc/sys/kernel/random/uuid)
+# xray config
+cat > /etc/xray/config.json << END
 {
   "log" : {
     "access": "/var/log/xray/access.log",
@@ -368,3 +371,4 @@ uuid=$(cat /proc/sys/kernel/random/uuid)
     }
   ]
 }
+END
