--- a/VMess-VLESS-Trojan+Websocket+gRPC/config.json
+++ b/VMess-VLESS-Trojan+Websocket+gRPC/config.json
@@ -1,7 +1,3 @@
-# set uuid
-uuid=$(cat /proc/sys/kernel/random/uuid)
-# xray config
-cat > /etc/xray/config.json << END
 {
   "log" : {
     "access": "/var/log/xray/access.log",
@@ -26,7 +22,7 @@ cat > /etc/xray/config.json << END
           "decryption":"none",
             "clients": [
                {
-                 "id": "${uuid}"
+                 "id": "uuid",
 #vless
              }
           ]
@@ -45,7 +41,7 @@ cat > /etc/xray/config.json << END
       "settings": {
             "clients": [
                {
-                 "id": "${uuid}"
+                 "id": "uuid",
                  "alterId": 0
 #vmess
              }
@@ -66,7 +62,7 @@ cat > /etc/xray/config.json << END
           "decryption":"none",
            "clients": [
               {
-                 "password": "${uuid}"
+                 "password": "uuid",
 #trojanws
               }
           ],
@@ -87,7 +83,7 @@ cat > /etc/xray/config.json << END
            "clients": [
            {
            "method": "aes-128-gcm",
-          "password": "${uuid}"
+          "password": "uuid",
 #ssws
            }
           ],
@@ -108,7 +104,7 @@ cat > /etc/xray/config.json << END
          "decryption":"none",
            "clients": [
              {
-               "id": "${uuid}"
+               "id": "uuid",
 #vlessgrpc
              }
           ]
@@ -127,7 +123,7 @@ cat > /etc/xray/config.json << END
       "settings": {
             "clients": [
                {
-                 "id": "${uuid}"
+                 "id": "uuid",
                  "alterId": 0
 #vmessgrpc
              }
@@ -148,7 +144,7 @@ cat > /etc/xray/config.json << END
           "decryption":"none",
              "clients": [
                {
-                 "password": "${uuid}"
+                 "password": "uuid",
 #trojangrpc
                }
            ]
@@ -168,7 +164,7 @@ cat > /etc/xray/config.json << END
         "clients": [
           {
              "method": "aes-128-gcm",
-             "password": "${uuid}"
+             "password": "uuid",
 #ssgrpc
            }
          ],
