--- a/VMess-VLESS-Trojan+Websocket+gRPC/config.json
+++ b/VMess-VLESS-Trojan+Websocket+gRPC/config.json
@@ -22,7 +22,7 @@
           "decryption":"none",
             "clients": [
                {
-                 "id": "uuid",
+                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
 #vless
              }
           ]
@@ -41,7 +41,7 @@
       "settings": {
             "clients": [
                {
-                 "id": "uuid",
+                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
                  "alterId": 0
 #vmess
              }
@@ -62,7 +62,7 @@
           "decryption":"none",
            "clients": [
               {
-                 "password": "uuid",
+                 "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
 #trojanws
               }
           ],
@@ -104,7 +104,7 @@
          "decryption":"none",
            "clients": [
              {
-               "id": "uuid",
+               "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
 #vlessgrpc
              }
           ]
@@ -123,7 +123,7 @@
       "settings": {
             "clients": [
                {
-                 "id": "uuid",
+                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
                  "alterId": 0
 #vmessgrpc
              }
@@ -144,7 +144,7 @@
           "decryption":"none",
              "clients": [
                {
-                 "password": "uuid",
+                 "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
 #trojangrpc
                }
            ]
@@ -164,7 +164,7 @@
         "clients": [
           {
              "method": "aes-128-gcm",
-             "password": "uuid",
+             "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
 #ssgrpc
            }
          ],
