--- a/VMess-VLESS-Trojan+Websocket+gRPC/config.json
+++ b/VMess-VLESS-Trojan+Websocket+gRPC/config.json
@@ -83,7 +83,7 @@
            "clients": [
            {
            "method": "aes-128-gcm",
-          "password": "uuid",
+          "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
 #ssws
            }
           ],
