--- a/fodder/nginx/xray.conf
+++ b/fodder/nginx/xray.conf
@@ -125,10 +125,10 @@ server_name 127.0.0.1;
 autoindex on;
       location / {
       if ($http_upgrade != "Upgrade") {
-      rewrite /(.*) /anggunovpn break;
+      rewrite /(.*) /fightertunnelssh break;
       }
                    proxy_redirect off;
-                   proxy_pass http://127.0.0.1:10012;
+                   proxy_pass http://127.0.0.1:10015;
                    proxy_http_version 1.1;
                    proxy_set_header Upgrade $http_upgrade;
                    proxy_set_header Connection "upgrade";
