--- a/fodder/nginx/xray.conf
+++ b/fodder/nginx/xray.conf
@@ -105,7 +105,7 @@ listen [::]:10030 proxy_protocol so_keepalive=on reuseport;
 server_name 127.0.0.1;
       location / {
       if ($http_upgrade != "Upgrade") {
-      rewrite /(.*) /anggunssh break;
+      rewrite /(.*) /fightertunnelssh break;
       }
                    proxy_redirect off;
                    proxy_pass http://127.0.0.1:10015;
@@ -125,10 +125,10 @@ server_name 127.0.0.1;
 autoindex on;
       location / {
       if ($http_upgrade != "Upgrade") {
-      rewrite /(.*) /fightertunnelssh break;
+      rewrite /(.*) /fightertunnelovpn break;
       }
                    proxy_redirect off;
-                   proxy_pass http://127.0.0.1:10015;
+                   proxy_pass http://127.0.0.1:10012;
                    proxy_http_version 1.1;
                    proxy_set_header Upgrade $http_upgrade;
                    proxy_set_header Connection "upgrade";
