--- a/fodder/FighterTunnel-examples/haproxy.cfg
+++ b/fodder/FighterTunnel-examples/haproxy.cfg
@@ -1,4 +1,4 @@
-#CONFIGURASI anggun LOADBALANCER [ xxx ]
+#CONFIGURASI GEO LOADBALANCER [ xxxx ]
 global       
     stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
     stats timeout 1d
@@ -51,12 +51,12 @@ frontend ssl
     mode tcp
     bind-process 1
     bind *:80 tfo
-    bind *:55 tfo
+    #bind *:55 tfo
     bind *:8080 tfo
     bind *:2086 tfo
     bind *:8880 tfo
-    bind *:8081-9999 tfo
-    bind abns@haproxy-https accept-proxy ssl crt /etc/haproxy/anggun.pem alpn h2,http/1.1 tfo
+    #bind *:8081-9999 tfo
+    bind abns@haproxy-https accept-proxy ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1 tfo
     
     tcp-request inspect-delay 200ms
     tcp-request content capture req.ssl_sni len 100
@@ -67,33 +67,35 @@ frontend ssl
     acl this_payload payload(0,7) -m bin 5353482d322e30
     acl up-to ssl_fc_alpn -i h2
 
-    use_backend GRUP_FTVPN if up-to
-    use_backend FTVPN if chk-02_up chk-02_ws 
-    use_backend FTVPN if { path_reg -i ^\/(.*) }
-    use_backend BOT_FTVPN if this_payload
-    default_backend CHANNEL_FTVPN
+    use_backend GRUP_BOKEP if up-to
+    use_backend BOKEP if chk-02_up chk-02_ws 
+    use_backend BOKEP if { path_reg -i ^\/(.*) }
+    use_backend OPEN_BO if this_payload
+    default_backend CHANNEL_BOKEP
 
 backend recir_https_www
     mode tcp
-    server misssv-bau 127.0.0.1:2223 check
+    server esteh 127.0.0.1:2223 check
      
-backend FTVPN
-    mode http
-    server hencet-bau 127.0.0.1:1010 send-proxy check 
-
-backend GRUP_FTVPN
-    mode tcp
-    server hencet-baus 127.0.0.1:1013 send-proxy check
-    
-backend CHANNEL_FTVPN
+backend BOKEP
     mode tcp
     balance roundrobin
-    server nonok-bau 127.0.0.1:1194 check
-    server memek-bau 127.0.0.1:1012 send-proxy check
+    server sshws 127.0.0.1:1010 send-proxy check
+    server wsovpn 127.0.0.1:1012 send-proxy check
 
-backend BOT_FTVPN
+backend GRUP_BOKEP
     mode tcp
-    server misv-bau 127.0.0.1:2222 check
+    server geerpeceh 127.0.0.1:1013 send-proxy check
+    
+backend CHANNEL_BOKEP
+    mode tcp
+    balance roundrobin
+    server ovpn 127.0.0.1:1194 check
+    server trojan 127.0.0.1:1014 check
+
+backend OPEN_BO
+    mode tcp
+    server esteh-ngesloww 127.0.0.1:2222 check
     
 backend recir_http
     mode tcp
