--- a/fodder/FighterTunnel-examples/Haproxy.conf
+++ b/fodder/FighterTunnel-examples/Haproxy.conf
@@ -1,121 +1,72 @@
-server {
+global
+        tune.ssl.default-dh-param 2048
+        tune.h2.initial-window-size 2147483647
 
-listen 81; 
+defaults
+        log global
+        mode    tcp
+        option  dontlognull
+        maxconn 5000
+        timeout connect 1s
+        timeout client  20s
+        timeout server  20s
+        timeout queue   30s
+        timeout http-request 1s
+        timeout http-keep-alive 1s
 
-listen [::]:81;
+frontend http
+        mode http
+        bind *:80
+        bind *:8080
+        bind *:2086
+        tcp-request inspect-delay 1ms
+        option forwardfor header X-Real-IP
+        http-request set-header X-Real-IP %[src]
+        tcp-request content accept if { req.payload(0,3) -m found }
+        tcp-request content accept if WAIT_END 
+        tcp-request content accept if { req.ssl_hello_type 1 }
+        tcp-request content accept if HTTP
+        use_backend openresty_http if HTTP
+        default_backend sshws
 
-root /var/www/html;
 
-}
+backend sshws
+        mode http
+        server sshws 127.0.0.1:22 check
 
-server {
-     listen 18020 proxy_protocol;
-     listen [::]:18020 proxy_protocol;
-     listen 10020 ssl http2 proxy_protocol;  
-     listen [::]:10020 http2 proxy_protocol;
-     server_name xxx;
-     autoindex on;
-     ssl_certificate /etc/xray/xray.crt;
-     ssl_certificate_key /etc/xray/xray.key;
-     ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-     ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-                    location /vless {
-                    if ($http_upgrade != "Upgrade") {
-rewrite /(.*) /vless break;
-      }
-proxy_redirect off;
-proxy_pass http://127.0.0.1:10001;
-proxy_http_version 1.1;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
-proxy_set_header Host $host;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
-                      location / {
-                      if ($http_upgrade != "Upgrade") {
-      rewrite /(.*) /vmess break;
-      }
-      proxy_redirect off;
-      proxy_pass http://127.0.0.1:10001;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
-                      location /trojan-ws {
-                      if ($http_upgrade != "Upgrade") {
-rewrite /(.*) /trojan-ws break;
-      }
-proxy_redirect off;
-proxy_pass http://127.0.0.1:10001;
-proxy_http_version 1.1;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
-proxy_set_header Host $host;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
-                        location ^~ /vless-grpc
-     {
-      proxy_redirect off;
-      grpc_set_header X-Real-IP \$remote_addr;
-      grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-      grpc_set_header Host \$http_host;
-      grpc_pass grpc://127.0.0.1:10005;
-     }
-                        location ^~ /vmess-grpc
-     {
-proxy_redirect off;
-grpc_set_header X-Real-IP \$remote_addr;
-grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-grpc_set_header Host \$http_host;
-grpc_pass grpc://127.0.0.1:10006;
-     }
-                         location ^~ /trojan-grpc
-     {
-     proxy_redirect off;
-     grpc_set_header X-Real-IP \$remote_addr;
-     grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-     grpc_set_header Host \$http_host;
-     grpc_pass grpc://127.0.0.1:10007;
-     }
-                         location ^~ /ss-grpc
-     {
-proxy_redirect off;
-grpc_set_header X-Real-IP \$remote_addr;
-grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-grpc_set_header Host \$http_host;
-grpc_pass grpc://127.0.0.1:10008;
+backend openresty_http
+        mode http
+        server http1   127.0.0.1:18020 send-proxy check
 
-      }
- }
-server {
-listen 18030 proxy_protocol;
-listen [::]:18030 proxy_protocol;
-listen 10030 ssl proxy_protocol;
-listen [::]:10030 proxy_protocol;
-server_name xxx;
-autoindex on;
-ssl_certificate /etc/xray/xray.crt;
-ssl_certificate_key /etc/xray/xray.key;
-ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-access_log  /dev/null;
-error_log  /dev/null;
-                         location / {
-                         if ($http_upgrade != "Upgrade") {
-                         rewrite /(.*) /fightertunnel break;
-      }
-     proxy_redirect off;
-     proxy_pass http://127.0.0.1:10015;
-     proxy_http_version 1.1;
-     proxy_set_header Upgrade $http_upgrade;
-     proxy_set_header Connection "upgrade";
-     proxy_set_header Host $host;
-     proxy_set_header X-Real-IP $remote_addr;
-     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
-}
+frontend ssl
+        mode tcp
+        bind 0.0.0.0:80
+        bind 0.0.0.0:443
+        bind *:443 tfo ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1
+        option forwardfor header X-Real-IP
+        http-request set-header X-Real-IP %[src]
+        tcp-request inspect-delay 1s
+        tcp-request content accept if { req.payload(0,11) -m found }
+        tcp-request content accept if WAIT_END 
+        tcp-request content accept if { req.ssl_hello_type 1 }
+#       acl web req.payload(0,3) -m found
+        acl web req_ssl_sni -i 127.0.0.1
+        acl is_ssh req.payload(0,7) -m bin 5353482d322e30        
+        use_backend load_balancer  if web
+        use_backend ssh if is_ssh
+        default_backend defaults_web
+
+backend load_balancer 
+        mode tcp
+        server localhost 127.0.0.1:443 check
+
+backend defaults_web
+        mode tcp
+        balance roundrobin
+        server website1 127.0.0.1:10030 send-proxy check
+        server website2 127.0.0.1:10040 send-proxy check
+        server website3 127.0.0.1:1194 check
+
+backend ssh
+        mode tcp
+        server website4 127.0.0.1:22 check
