--- a/fodder/FighterTunnel-examples/Documentation/haproxy.cfg
+++ b/fodder/FighterTunnel-examples/Documentation/haproxy.cfg
@@ -42,7 +42,7 @@ frontend ssl
         mode tcp
         bind 0.0.0.0:80
         bind 0.0.0.0:443
-        bind *:443 tfo ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1
+        bind *:443 tfo ssl crt /etc/haproxy/yha.pem alpn h2,http/1.1
         option forwardfor header X-Real-IP
         http-request set-header X-Real-IP %[src]
         tcp-request inspect-delay 1s
